# Hackathon-Search-Engine

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: telegram.yml
data/: Dataset_main.json  Dataset_main_questions.jsonl  Dataset_sweep.json  Dataset_sweep_questions.jsonl  index_request_sample.json
docs/: 02_index_deep_dive.md  CLAUDE (2).md  api.md  architecture.md  eval-harness.md  index_service.md  local_development.md  ml-roadmap.md  ml_description.md  process.md  search_service.md
eval/: ingest.py  run.py
index/: CHUNKING.md  Dockerfile  __init__.py  chunking.py  config.py  main.py  schemas.py  sparse.py
scripts/: ab_qdrant.py  chunking_diagnostic.py  ruff_changed.py  sweep_chunking.py
search/: config.py  main.py  pipeline.py  querying.py  schemas.py
